ft/added docs upgrade

--- a/api-reference/checkout/verify-checkout-transaction.mdx
+++ b/api-reference/checkout/verify-checkout-transaction.mdx
@@ -1,4 +1,4 @@
 ---
-title: Retrieve a checkout transaction
+title: Verify a checkout transaction
 openapi: get /api/v1/checkout/{transactionRef}/verify
 ---
