ft/add novac introduction pages

--- a/api-reference/checkout/introduction.mdx
+++ b/api-reference/checkout/introduction.mdx
@@ -1,11 +1,13 @@
 ---
 title: Introduction
-description: Get started with Novac Payment APIs.
+description: Collect payments via Card, Bank Transfer, or USSD using Novac Checkout.
 ---
 
 ## Overview  
 
-Novac Payment provides a powerful set of APIs that let you accept payments, verify transactions, manage payouts, and streamline your customers’ payment experience. Whether you’re building a simple checkout flow or a complex enterprise integration, Novac gives you the tools to move money securely and efficiently.
+Checkout allows you to collect payments seamlessly through three main channels.  
+This gives your customers the flexibility to choose the method most convenient to them.
+
 
 ---
 
