--- a/api-reference/collections/introduction.mdx
+++ b/api-reference/collections/introduction.mdx
@@ -47,7 +47,7 @@ Collections allow you to accept payments directly via cards, verify transactions
 
 <Card
   title="Verify Transaction with Reference"
-  icon="search"
+  icon="badge-check"
   href="/api-reference/collections/transaction-verify-ref"
 >
   Verify a transaction by reference ID.
@@ -55,7 +55,7 @@ Collections allow you to accept payments directly via cards, verify transactions
 
 <Card
   title="Encrypt Data"
-  icon="shield"
+  icon="shield-halved"
   href="/api-reference/collections/encrypt-data"
 >
   Encrypt sensitive card or payment data.
@@ -63,7 +63,7 @@ Collections allow you to accept payments directly via cards, verify transactions
 
 <Card
   title="Decrypt Data"
-  icon="shield-off"
+  icon="shield-halved"
   href="/api-reference/collections/decrypt-data"
 >
   Decrypt encrypted payment data securely.
@@ -79,7 +79,7 @@ Collections allow you to accept payments directly via cards, verify transactions
 
 <Card
   title="Get 3DS Challenge Status"
-  icon="activity"
+  icon="user-ninja"
   href="/api-reference/collections/get-threeds-challenge-status"
 >
   Retrieve the status of a 3DS challenge.
@@ -95,7 +95,7 @@ Collections allow you to accept payments directly via cards, verify transactions
 
 <Card
   title="Void Transaction"
-  icon="x-circle"
+  icon="xmark"
   href="/api-reference/collections/void-transaction"
 >
   Cancel or void a pending transaction.
