--- a/api-reference/payouts/introduction.mdx
+++ b/api-reference/payouts/introduction.mdx
@@ -31,7 +31,7 @@ Payouts allow you to transfer funds seamlessly to bank accounts. You can retriev
 
 <Card
   title="Initiate Transfer"
-  icon="send"
+  icon="paper-plane"
   href="/api-reference/payouts/initiate-transfer"
 >
   Send money to a verified recipient’s bank account.
