--- a/api-reference/payment-links/create-payment-link.mdx
+++ b/api-reference/payment-links/create-payment-link.mdx
@@ -1,4 +1,4 @@
 ---
-title: Create a payment link
+title: Create a checkout payment with payment link reference
 openapi: post /api/v1/paymentlink/initiate
 ---
