--- a/docs/accept-payment/use-cases/accept-payment-with-payment-links.mdx
+++ b/docs/accept-payment/use-cases/accept-payment-with-payment-links.mdx
@@ -26,6 +26,7 @@ In this tutorial, we will explain step-by-step how you can create a payment link
   1. Card Payment
   2. Bank transfer
   3. USSD payment
+  4. NQR (Novac QR)
 </Accordion>
 
 ---
