--- a/docs/accept-payment/use-cases/create-checkout-with-transaction-reference.mdx
+++ b/docs/accept-payment/use-cases/create-checkout-with-transaction-reference.mdx
@@ -22,6 +22,8 @@ Please see how to [create a checkout payment with payment link reference](/docs/
   
 ---
 
+In this tutorial, we will explain step-by-step how you can create a checkout payment with a unique transaction reference.
+
 ## Prerequisite
 
 <Accordion title="See details">
@@ -31,6 +33,13 @@ Please see how to [create a checkout payment with payment link reference](/docs/
   - [Obtain your public API keys](/docs/getting-started/obtain-api-keys): required for making authenticated API calls.
   - [Understand how to create a checkout payment with payment link reference](/docs/accept-payment/use-cases/accept-payment-with-payment-links): helps you choose between a payment link reference and a transaction reference.
   - [Understand how to complete payments](/docs/accept-payment/use-cases/create-checkout-with-transaction-reference#how-to-complete-payment): essential to know how to finalize payments after creation.
+</Accordion>
+
+<Accordion title="Payment methods">
+  Your clients can choose to pay via :
+  1. Card Payment
+  2. Bank transfer
+  3. USSD payment
 </Accordion>
 
 ---
