--- a/api-reference/checkout/verify-checkout-transaction.mdx
+++ b/api-reference/checkout/verify-checkout-transaction.mdx
@@ -1,4 +1,4 @@
 ---
-title: Verify a checkout transaction
-openapi: get /api/v1/checkout/{transactionRef}/verify
+title: Retrieve a checkout payment transaction
+openapi: get /api/v1/checkout/transaction/{transactionRef}
 ---
