--- a/api-reference/checkout/verify-transaction.mdx
+++ b/api-reference/checkout/verify-transaction.mdx
@@ -1,4 +1,4 @@
 ---
-title: Retrieve a checkout transaction
-openapi: get /api/v1/checkout/transaction/{transactionRef}
+title: Verify a transaction
+openapi: get /api/v1/checkout/{transactionRef}/verify
 ---
