--- a/docs/accept-payment/use-cases/complete-payment/custom-checkout.mdx
+++ b/docs/accept-payment/use-cases/complete-payment/custom-checkout.mdx
@@ -25,17 +25,6 @@ You only control the payment completion logic while we handle the payment proces
 
 After successfully creating a checkout payment, you can use the `transactionReference` return as part of the response object to start a custom checkout process. this requires that you have built a form in your frontend that shows the amount charged. We exposes an API that also allow you to fetch transaction fees, complete payment with card, ussd or bank transfer. 
 
-
-```mermaid
-flowchart TD
-  A[Merchant Server] -->|Create Checkout Payment| B[Novac API]
-  B -->|Response with transactionReference and paymentRedirectUrl| C[Merchant Frontend]
-  C -->|Display custom checkout form (amount and payment method buttons)| D[Customer]
-  D -->|Select preferred payment method| E[Merchant Frontend]
-  E -->|Send payment request using transactionReference &amp; payment data| F[Novac Payment Processor]
-  F -->|Process payment securely| G[Bank/Payment Gateway]
-```
-
 After creating a checkout payment, you’ll receive a response that includes a `paymentRedirectUrl` field:
 
 ```json expandable created checkout payment response data
@@ -61,4 +50,16 @@ Lets build a simple payment completion logic using Javascript as our frontend, w
 ```html
 
 ```
+
+---
+
+## What’s Next?
+
+Learn how to verify transactions after payment is completed: 
+
+- Using Webhooks: Automatically receive payment status updates from Novac when a transaction is completed.  
+  [Learn how to verify a transaction via webhooks](/docs/api-basics/webhooks)
+
+- Using the Callback URL: Manually verify the payment using the `reference` parameter sent to your callback URL.  
+  [Learn how to verify a transaction using a callback reference](/docs/accept-payment/use-cases/verify-transaction)
 
