--- a/docs/accept-payment/use-cases/complete-payment/prebuilt-checkout.mdx
+++ b/docs/accept-payment/use-cases/complete-payment/prebuilt-checkout.mdx
@@ -61,3 +61,15 @@ This URL opens Novac’s prebuilt checkout, where customers can choose a preferr
     alt="Pay with Novac prebuilt checkout"
   />
 </Frame>
+
+---
+
+## What’s Next?
+
+Learn how to verify transactions after payment is completed: 
+
+- Using Webhooks: Automatically receive payment status updates from Novac when a transaction is completed.  
+  [Learn how to verify a transaction via webhooks](/docs/api-basics/webhooks)
+
+- Using the Callback URL: Manually verify the payment using the `reference` parameter sent to your callback URL.  
+  [Learn how to verify a transaction using a callback reference](/docs/accept-payment/use-cases/verify-transaction)
