--- a/docs/accept-payment/use-cases/accept-payment-with-direct-card-charge.mdx
+++ b/docs/accept-payment/use-cases/accept-payment-with-direct-card-charge.mdx
@@ -109,3 +109,17 @@ curl --request POST \
   }
 ]'
 ```
+
+---
+
+## What’s Next?
+
+Learn how to verify transactions after payment is completed by following any of the guides below: 
+
+- Using Webhooks: Automatically receive payment status updates from Novac when a transaction is completed.  
+  [Learn how to verify a transaction via webhooks](/docs/api-basics/webhooks)
+
+- Using the Callback URL: Manually verify the payment using the `reference` parameter sent to your callback URL.  
+  [Learn how to verify a transaction using a callback reference](/docs/accept-payment/use-cases/verify-transaction)
+
+
