--- a/docs/api-basics/webhooks.mdx
+++ b/docs/api-basics/webhooks.mdx
@@ -8,12 +8,19 @@ description: Learn how to set up and handle webhook notifications in Novac Payme
 Webhooks are a communication mechanism that enable event-driven notifications between systems. When an event occurs in System A, it notifies System B in real time without requiring System B to constantly check for updates. Typically, System B subscribes to these notifications by providing a publicly accessible URL to System A.
 
 <Note> 
-   Webhook URLs must be publicly accessible at all times in order to receive notifications.   
+  Webhook URLs must be publicly accessible at all times in order to receive notifications.   
 </Note>
 
-In Novac, implementing webhooks works the same way. After a transaction is completed, Novac will send real-time updates to your application via a POST request to the webhook URL you configured. Instead of polling the API for payment status, your system will automatically be notified whenever a payment event occurs.
+In Novac, implementing webhooks works the same way. After a transaction is completed, Novac will send real-time updates to your application via a `POST` request to the webhook URL you configured. Instead of polling the API for payment status, your system will automatically be notified whenever a payment event occurs.
 
 This makes it easier to keep your system in sync with payment statuses.  
+
+## Process Flow
+
+<Note>
+  You don’t need to manually subscribe to webhook events.  
+  Once you configure your webhook URLs in the dashboard, Novac automatically sends notifications whenever relevant events occur in your account.
+</Note>
 
 ```mermaid
     sequenceDiagram
@@ -27,16 +34,15 @@ This makes it easier to keep your system in sync with payment statuses.
 
     Note over N,M: Webhook event triggered
 
-    N->>M: HTTP POST request (webhook notification)<br/> {reference, status, amount, ...}
+    N->>M: HTTP POST request (webhook notification)
     M->>N: 200 OK (acknowledge receipt)
 
     Note over M: Merchant verifies transaction<br/>via Verify Transaction API
 ```
 
-This diagram illustrates the communication process that occurs from the moment the customer makes a payment until the Novac system authorizes that payment. After that, the webhook event is sent via the established communication channel for verification to the merchant system. 
+This flow shows how Novac triggers a webhook event once a payment is processed, enabling your system to confirm the payment status automatically.
 
 ---
-
 
 ## Setting Up Your Webhook
 
@@ -56,7 +62,7 @@ This diagram illustrates the communication process that occurs from the moment t
 </Steps>
 
 <Note>
-    - Add a test webhook URL for sandbox/test transactions.  
+    - Add a test webhook URL for test transactions.  
     - Add a live webhook URL for real payments in production.  
     - Ensure the URLs are always available and accept `POST` requests.
 </Note>
@@ -65,166 +71,76 @@ Novac will send an HTTP `POST` request to these URLs after a transaction is comp
 
 ---
 
+## Notification Types
+
+| Notify Type  | Description                                        | Common Scenario                                  |
+| ------------ | -------------------------------------------------- | ------------------------------------------------ |
+| `successful` | Payment or transaction was processed successfully. | A customer’s card or bank transfer succeeded.    |
+| `failed`     | Transaction attempt failed or was declined.        | Insufficient funds or incorrect payment details. |
+| `reversed`   | A previously successful transaction was reversed.  | Refunds or chargeback scenarios.                 |
+| `abandoned`  | Transaction was started but not completed.         | Customer exited before finalizing payment.       |
+
+---
+
 ## Webhook Request Format  
-
-Currently, Novac sends a callback to your webhook URL with query parameters. The reference can be used to verify transaction instantly before giving value to the customer. 
-
-```http
-POST {your-webhook-url}?reference=string&status=string
-```
-
-## Handling Webhook
-
-Define a `POST` endpoint on your server that can accept and process the callback sent with the webhooks from Novac to your system. This endpoint must not require authentication. Safely parse the reference and status, as the value will be used to verify the transaction.
-
-This method allows you to fetch the full transaction details directly from Novac, instead of relying only on the status passed in the webhook.
-
-Below shows an example of how to quickly listen to this event and verify transactions by parsing the reference via verify transaction in various programming languages.
-
-
-
-<CodeGroup>
-```JavaScript NodeJs
-import express from "express";
-import axios from "axios";
-
-const app = express();
-
-app.post("/webhook", async (req, res) => {
-  const { reference, status } = req.query;
-
-  // Verify transaction with Novac API
-  try {
-    const response = await axios.get(
-      `https://api.novacpayment.com/api/v1/checkout/{reference}/verify \`,
-      {
-        headers: { Authorization: `Bearer ${process.env.NOVAC_SECRET_KEY}` },
-      }
-    );
-
-    const transaction = response.data;
-    console.log("Verified Transaction:", transaction);
-
-    // Process the transaction result in your system here
-  } catch (error) {
-    console.error(error.message);
-  }
-
-  res.sendStatus(200);
-});
-
-```
-
-```php PHP
-<?php
-$input = json_decode(file_get_contents('php://input'), true);
-
-$reference = $input['reference'] ?? null;
-$status = $input['status'] ?? null;
-
-error_log("Webhook received: Reference=$reference Status=$status");
-
-// Verify transaction with Novac API
-$secretKey = getenv("NOVAC_PUBLIC_KEY");
-$url = "https://api.novacpayment.com/api/v1/checkout/{$reference}/verify";
-
-$ch = curl_init($url);
-curl_setopt($ch, CURLOPT_RETURNTRANSFER, true);
-curl_setopt($ch, CURLOPT_HTTPHEADER, [
-    "Authorization: Bearer $secretKey"
-]);
-$response = curl_exec($ch);
-curl_close($ch);
-
-if ($response) {
-    error_log("Verified Transaction: $response");
-} else {
-    error_log("Verification failed");
+Each webhook request payload sent from Novac follows the structure below:
+```json expandable Webhook format
+{
+  "data": {
+    "id": 0,
+    "card": {
+      "type": "",
+      "token": "",
+      "issuer": "",
+      "country": "",
+      "last4Digits": "",
+      "first6Digits": ""
+    },
+    "amount": 300,
+    "domain": "live",
+    "status": "failed | reversed | successful | abandoned",
+    "channel": "",
+    "currency": "NGN",
+    "customer": {
+      "id": 0,
+      "name": "",
+      "email": "",
+      "customerCode": ""
+    },
+    "requestIp": "",
+    "redirectUrl": "",
+    "chargedAmount": 0,
+    "transactionFee": 0,
+    "transferDetail": {
+      "bankCode": "",
+      "bankName": "",
+      "sessionId": "",
+      "accountNumber": "",
+      "originatorName": "",
+      "creditAccountName": "",
+      "originatorAccountNumber": ""
+    },
+    "checkoutMetadata": "{}",
+    "authorizationCode": "",
+    "paymentDescriptor": "NOVAC",
+    "gatewayResponseCode": "",
+    "transactionReference": ""
+  },
+  "notify": "transaction | wallet_funding | banktransfer",
+  "notifyType": "failed | reversed | successful | abandoned"
 }
-
-http_response_code(200); 
-
 ```
 
-```go Golang
-package main
+The webhook structure provides complete details about the transaction event, including customer, card, and transfer details.
 
-import (
-	"encoding/json"
-	"fmt"
-	"io/ioutil"
-	"net/http"
-	"os"
-)
+---
 
-type WebhookPayload struct {
-	Reference string `json:"reference"`
-	Status    string `json:"status"`
-}
+## Verifying Webhook Source
 
-func webhookHandler(w http.ResponseWriter, r *http.Request) {
-	var payload WebhookPayload
-	body, _ := ioutil.ReadAll(r.Body)
-	json.Unmarshal(body, &payload)
+Webhooks are publicly available URLs; this means that anyone can fake a webhook sample and send a fake request to your system. It's important to verify that all webhooks received are from Novac to avoid man-in-the-middle attacks. 
 
-	fmt.Printf("Webhook received: Reference=%s Status=%s\n", payload.Reference, payload.Status)
+To verify that this webhook event is coming from us, we advise merchants to use IP whitelisting. We provide our IP address, and you should verify that every webhook request comes from this address.
 
-	// Verify with Novac API
-	secretKey := os.Getenv("NOVAC_SECRET_KEY")
-	url := fmt.Sprintf("https://api.novacpayment.com/api/v1/checkout/%s/verify", payload.Reference)
+--
 
-	req, _ := http.NewRequest("GET", url, nil)
-	req.Header.Set("Authorization", "Bearer "+secretKey)
-
-	client := &http.Client{}
-	resp, err := client.Do(req)
-	if err != nil {
-		fmt.Println("Verification failed:", err)
-	} else {
-		defer resp.Body.Close()
-		respBody, _ := ioutil.ReadAll(resp.Body)
-		fmt.Println("Verified Transaction:", string(respBody))
-	}
-
-	w.WriteHeader(http.StatusOK)
-}
-
-func main() {
-	http.HandleFunc("/webhook", webhookHandler)
-	fmt.Println("Webhook server running on :3000")
-	http.ListenAndServe(":3000", nil)
-}
-
-```
-
-```py python
-from flask import Flask, request
-import requests
-import os
-
-app = Flask(__name__)
-
-@app.route("/webhook", methods=["POST"])
-def webhook():
-    data = request.json
-    reference = data.get("reference")
-    status = data.get("status")
-
-    print(f"Webhook received: Reference={reference}, Status={status}")
-
-    try:
-        url = f"https://api.novacpayment.com/api/v1/checkout/{reference}/verify"
-        headers = {"Authorization": f"Bearer {os.getenv('NOVAC_SECRET_KEY')}"}
-        response = requests.get(url, headers=headers)
-
-        print("Verified Transaction:", response.json())
-    except Exception as e:
-        print("Verification failed:", str(e))
-
-    return "", 200  # acknowledge webhook
-
-if __name__ == "__main__":
-    app.run(port=3000, debug=True)
-
-```
-</CodeGroup>
+## Retries
