--- a/docs/introduction/welcome-to-novac.mdx
+++ b/docs/introduction/welcome-to-novac.mdx
@@ -21,7 +21,7 @@ This documentation provides in-depth guides, use cases, and ready-to-use code sa
   <Card
     icon="cart-shopping"
     title="Make Payment"
-    href="/docs/make-payment/use-cases/initiate-transfer"
+    href="/docs/make-payment/use-cases/make-payout"
   >
     Send money instantly with APIs for payouts, Perfect for businesses that need to automate disbursements at scale.
   </Card>
@@ -62,7 +62,7 @@ This documentation provides in-depth guides, use cases, and ready-to-use code sa
   <Card
     icon="code"
     title="Code Samples"
-    href="docs/accept-payment/use-cases/accept-payment-with-custom-checkout"
+    href=""
   >
     Copy-paste ready code snippets in JavaScript, Node.js, and more.  
     Speed up integration with production-ready examples.
